--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "lint-staged": {
     "linters": {
       "*.js": [
-        "eslint --fix --ignore-pattern src",
+        "eslint --fix src",
         "git add"
       ]
     },
@@ -60,5 +60,8 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
+  },
+  "dependencies": {
+    "babel-eslint": "^10.0.1"
   }
 }
