--- a/packages/vod-fp-mux/package.json
+++ b/packages/vod-fp-mux/package.json
@@ -15,6 +15,9 @@
     "mux",
     "remux"
   ],
+  "devDependencies": {
+    "vod-fp-utility": "0.0.1"
+  },
   "author": "xiyuyizhi",
   "license": "ISC",
   "bugs": {
