--- a/package.json
+++ b/package.json
@@ -21,12 +21,11 @@
   "lint-staged": {
     "linters": {
       "*.js": [
-        "eslint  packages/**/src/**.js",
+        "eslint packages/*/src/**.js",
         "git add"
       ]
     },
     "ignore": [
-      "node_modules/**/**.js",
       "scripts/**.js",
       "packages/**/test/**.js"
     ]
