--- a/package.json
+++ b/package.json
@@ -53,10 +53,11 @@
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/register": "^7.0.0",
-    "babel-loader": "^8.0.5",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
     "chai": "^4.2.0",
+    "chai-spies": "^1.0.0",
     "eslint": "^5.15.2",
     "eslint-config-airbnb-base": "^13.1.0",
     "html-webpack-plugin": "^3.2.0",
