--- a/packages/vod-fp-utility/package.json
+++ b/packages/vod-fp-utility/package.json
@@ -14,7 +14,9 @@
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/register": "^7.0.0",
-    "mocha": "^6.0.2"
+    "mocha": "^6.0.2",
+    "chai": "^4.2.0",
+    "chai-spies": "^1.0.0"
   },
   "author": "xiyuyizhi",
   "license": "ISC",
