--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,13 @@
 {
-  "presets": [["@babel/preset-env"]]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "chrome": "31",
+          "ie": "11"
+        }
+      }
+    ]
+  ]
 }
