fix m3u8存在不连续标记时 mux baseMediaDecodeTime 计算错误

--- a/packages/vod-fp-mux/package.json
+++ b/packages/vod-fp-mux/package.json
@@ -16,7 +16,8 @@
     "remux"
   ],
   "devDependencies": {
-    "vod-fp-utility": "0.0.1"
+    "vod-fp-utility": "0.0.1",
+    "vod-fp-player": "0.0.1"
   },
   "author": "xiyuyizhi",
   "license": "ISC",
