--- a/packages/vod-fp-mux/package.json
+++ b/packages/vod-fp-mux/package.json
@@ -15,8 +15,10 @@
     "mux",
     "remux"
   ],
+  "dependencies": {
+    "vod-fp-utility": "0.0.1"
+  },
   "devDependencies": {
-    "vod-fp-utility": "0.0.1",
     "vod-fp-player": "0.0.1"
   },
   "author": "xiyuyizhi",
