--- a/packages/vod-fp-player/package.json
+++ b/packages/vod-fp-player/package.json
@@ -2,7 +2,7 @@
   "name": "vod-fp-player",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "lib/vod-fp-player.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
