--- a/packages/vod-fp-mux/package.json
+++ b/packages/vod-fp-mux/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vod-fp-mux",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "main": "/lib/vod-fp-mux.min.js",
   "scripts": {
@@ -17,10 +17,10 @@
   ],
   "dependencies": {
     "aes-js": "^3.1.2",
-    "vod-fp-utility": "0.0.1"
+    "vod-fp-utility": "^0.1.0"
   },
   "devDependencies": {
-    "vod-fp-player": "0.0.1"
+    "vod-fp-player": "^0.1.0"
   },
   "author": "xiyuyizhi",
   "license": "ISC",
