--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "terser-webpack-plugin": "^1.2.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.2.1",
+    "webworkify-webpack": "^2.1.5"
   }
 }
