--- a/packages/vod-fp-mux/package.json
+++ b/packages/vod-fp-mux/package.json
@@ -2,7 +2,7 @@
   "name": "vod-fp-mux",
   "version": "1.0.0",
   "description": "",
-  "main": "/lib/vod-fp-mux.min.js",
+  "main": "lib/vod-fp-mux.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
